<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">


        <TextView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/tex_regular"
            android:gravity="center_vertical"
            android:text="@string/const_name"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <ImageView
            android:id="@+id/groupImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="525dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center">
                <TableRow
                    android:background="@color/purple_500"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/infoHead0"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@color/black95"
                        android:fontFamily="@font/tex_bold"
                        android:gravity="center_horizontal"
                        android:onClick="showHead0Tapped"
                        android:padding="15dp"
                        android:text="@string/Row1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAllCaps="false"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row1"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/code"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="13dp"
                        />

                    <TextView
                        android:id="@+id/codeValue"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/codeValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row2"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/r_asc"
                        android:fontFamily="@font/tex_bold"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp" />
                    <TextView
                        android:id="@+id/r_ascValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/r_ascValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row3"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/declension"
                        android:fontFamily="@font/tex_bold"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/declensionValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/declensionValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row4"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/area"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/areaValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/areaValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row5"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/latitude"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp"/>

                    <TextView
                        android:id="@+id/latitudeValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/latitudeValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row7"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/stars"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/starsValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="15dp"
                        android:text="@string/starsValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp"
                        android:lineSpacingExtra="4sp"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/row6"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/meteorshowers"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/meteorshowersValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="15dp"
                        android:text="@string/meteorshowersValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp"
                        android:lineSpacingExtra="4sp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white99">
                <TableRow
                    android:background="@color/purple_500">
                    <Button
                        android:id="@+id/row8"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/neighbour"
                        android:fontFamily="@font/tex_bolditalic"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp"
                        android:textAllCaps="false"
                        android:onClick="showRow8Tapped"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/neighbourValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="30dp"
                        android:text="@string/neighbourValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="16dp"
                        android:lineSpacingExtra="4sp" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white99">
                <TableRow
                    android:background="@color/purple_500">
                    <Button
                        android:id="@+id/row9"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/majorStars"
                        android:fontFamily="@font/tex_bolditalic"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp"
                        android:textAllCaps="false"
                        android:onClick="showRow9Tapped"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/majorStarsValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="30dp"
                        android:text="@string/majorStarsValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp"
                        android:lineSpacingExtra="4sp" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white99">
                <TableRow
                    android:background="@color/purple_500">
                    <Button
                        android:id="@+id/row10"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/history"
                        android:fontFamily="@font/tex_bolditalic"
                        android:textColor="@color/white"
                        android:background="@color/black95"
                        android:textSize="14dp"
                        android:textAllCaps="false"
                        android:onClick="showRow10Tapped"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/historyValue"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="30dp"
                        android:text="@string/historyValue"
                        android:fontFamily="@font/tex_regular"
                        android:textColor="@color/black95"
                        android:background="@color/white99"
                        android:textSize="14dp"
                        android:lineSpacingExtra="4sp" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white99"
                android:layout_marginBottom="1600dp">
                <TableRow
                    android:id="@+id/infoTab1_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>